Fix the overflowing pre problem on mobile

--- a/_sass/minima/snailedit-styles.scss
+++ b/_sass/minima/snailedit-styles.scss
@@ -22,21 +22,14 @@ html {
 }
 
 .docs-page {
-	display: grid;
-	grid-template-areas:
+	@media (min-width: $on-palm) {
+		display: grid;
+		grid-template-areas:
 		'post-header post-header'
 		'page-content sidebar'
 		'documentation sidebar'
 		'end-content end-content';
-	@media (min-width: $on-palm) {
 		grid-template-columns: 3fr 1fr;
-	}
-	@include media-query($on-palm) {
-		grid-template-areas:
-			'post-header'
-			'page-content'
-			'sidebar'
-			'documentation';
 	}
 
 	.end-content {
@@ -45,6 +38,7 @@ html {
 
 	.post-header {
 		grid-area: post-header;
+		overflow-wrap: break-word;
 	}
 
 	.page-content {
@@ -55,7 +49,7 @@ html {
 	.documentation {
 		grid-area: documentation;
 		width: 100%;
-		@media (min-width: $on-palm) {
+		@include media-query($on-palm) {
 			max-width: 660px;
 		}
 
@@ -100,7 +94,7 @@ html {
 
 	.sidenav {
 		grid-area: sidebar;
-		@media (min-width: $on-palm) {
+		@include media-query($on-palm) {
 			border-left: solid 1px $text-color;
 			margin-left: 1em;
 		}
@@ -116,7 +110,7 @@ html {
 					font-weight: bold;
 				}
 			}
-			@media (min-width: $on-palm) {
+			@include media-query($on-palm) {
 				margin-left: 1em;
 				position: sticky;
 				top: calc($nav-bar-height + 10%)
@@ -146,7 +140,7 @@ html {
 		color: $text-color;
 		max-width: 100%;
 		padding: 0.5em;
-		@media (min-width: $on-palm) {
+		@include media-query($on-palm) {
 			width: 50%;
 		}
 		@media (max-width: $on-palm) {
@@ -158,7 +152,7 @@ html {
 	}
 
 	input[type='submit'] {
-		@media (min-width: $on-palm) {
+		@include media-query($on-palm) {
 			max-width: 20%;
 			width: auto;
 		}
@@ -168,7 +162,7 @@ html {
 		@media (max-width: $on-palm) {
 			display: grid;
 		}
-		@media (min-width: $on-palm) {
+		@include media-query($on-palm) {
 			display: flex;
 
 			.field {
@@ -268,7 +262,7 @@ html {
 	@media (max-width: $on-palm) {
 		display: block;
 	}
-	@media (min-width: $on-palm) {
+	@include media-query($on-palm) {
 		display: grid;
 		gap: 1em;
 		grid-auto-flow: column;
@@ -278,7 +272,7 @@ html {
 		display: flex;
 		align-items: center;
 
-		@media (min-width: $on-palm) {
+		@include media-query($on-palm) {
 			width: 300px;
 		}
 		@media (max-width: $on-palm) {
@@ -288,7 +282,7 @@ html {
 
 		img,
 		object {
-			@media (min-width: $on-palm) {
+			@include media-query($on-palm) {
 				max-width: 300px;
 			}
 			@media (max-width: $on-palm) {
@@ -349,7 +343,7 @@ html {
 }
 
 .site-header {
-	background-color: $lm-brand-color;
+	background-color: $site-header;
 	border-bottom: none;
 	border-top: none;
 
@@ -367,7 +361,7 @@ html {
 	}
 
 	@media (prefers-color-scheme: dark) {
-		background-color: $dm-brand-color !important;
+		background-color: $site-header !important;
 	}
 
 	.site-title,
